# STAT3007-deep-learning

Assignments/A1/: A1.html  A1.ipynb  instructions.ipynb  util.py
Assignments/A2/: A2.html  A2.ipynb  Q3_help.ipynb  instructions.ipynb  util.py
Assignments/A2/.ipynb_checkpoints/: A2-checkpoint.ipynb
Project-timeseries_forecasting/: .gitignore  README.md  prog.sh  pyproject.toml  rangpur.sh  requirements.txt
Project-timeseries_forecasting/data/: dataeqnr_max_daily.csv  nasdaq_energy_sector.csv
Project-timeseries_forecasting/stat3007_timeseries_forecasting/: __init__.py  dataset.py  utils.py
Project-timeseries_forecasting/stat3007_timeseries_forecasting/GRUand1Dconv/: models.py  multistep_sine.ipynb  train_test_sine.ipynb
Project-timeseries_forecasting/stat3007_timeseries_forecasting/RNN/: rnn.ipynb  sin_testing.ipynb
Project-timeseries_forecasting/stat3007_timeseries_forecasting/exploratory_analysis/: comparison.ipynb  eqnr_analysis.ipynb
Project-timeseries_forecasting/stat3007_timeseries_forecasting/forest/: forest.ipynb  prophet.ipynb  random_forest.ipynb
Project-timeseries_forecasting/stat3007_timeseries_forecasting/lstm/: models.py  multistep.ipynb  notes.md  predictions.ipynb  run.py
Project-timeseries_forecasting/stat3007_timeseries_forecasting/transformer/: transformer_forecasting.ipynb
Tutorial-Paper/: DL_code_ex.ipynb
